force-app/src/objects/CIS_Application__c.object
<CustomObject>
    <description>Talentrover Phase Out Object</description>
    <fields>
        <fullName>Applicant_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CIS Applications</relationshipLabel>
        <relationshipName>CIS_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CIS Applications</relationshipLabel>
        <relationshipName>CIS_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_status__c</fullName>
        <label>Application status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
                <value>
                    <fullName>Under Revision</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_on__c</fullName>
        <label>Applied on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_for_Multiple_Visits__c</fullName>
        <inlineHelpText>CIS works in two semsters: Semester 1 refers to visits taking place between 1 January to 30 June.
Semester 2 refers to visits taking place between 1 July to 31 December.</inlineHelpText>
        <label>Available for Multiple Visits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple this semester</fullName>
                </value>
                <value>
                    <fullName>Only one this semester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIS_Evaluator_Professional_Expectations__c</fullName>
        <defaultValue>&quot;https://info.cois.org/cis-evaluator-professional-expectations&quot;</defaultValue>
        <label>CIS Evaluator Professional Expectations</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOS_Accreditation_School__c</fullName>
        <formula>Job__r.Account__r.Head_of_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HOS Accreditation School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_agree_to_CIS_Professional_Expectations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I agree to CIS Professional Expectations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Important__c</fullName>
        <formula>&quot;Please save the dates until you are notified of the outcome.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Important</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Contact__c</fullName>
        <formula>Job__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Job__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>CIS_Job__c</referenceTo>
        <relationshipLabel>CIS Application</relationshipLabel>
        <relationshipName>CIS_Application</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Code_of_Conduct__c</fullName>
        <formula>HYPERLINK(&quot;https://community.cois.org/educators/s/code-of-conduct&quot;, 
&quot;CIS Code of Conduct&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Code of Conduct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_at_time_of_Visit__c</fullName>
        <label>Location at time of Visit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longlist_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longlist Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Applications__c</fullName>
        <formula>IF(Applicant__r.Id = $User.ContactId, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <description>Stores the TalentRover Object Salesforce Id</description>
        <externalId>true</externalId>
        <label>OldId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldJobId__c</fullName>
        <externalId>true</externalId>
        <label>OldJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Of</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <inlineHelpText>Should travel be required for this visit, please indicate on which passport you would travel</inlineHelpText>
        <label>Passport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permission_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have secured permission to participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>TEXT(Job__r.Position__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Representing_Agency__c</fullName>
        <label>Representing Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACSI</fullName>
                </value>
                <value>
                    <fullName>AdvancED</fullName>
                </value>
                <value>
                    <fullName>BSME</fullName>
                </value>
                <value>
                    <fullName>BSO</fullName>
                </value>
                <value>
                    <fullName>CAIS</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>IB CC</fullName>
                </value>
                <value>
                    <fullName>IB DP</fullName>
                </value>
                <value>
                    <fullName>IB MYP</fullName>
                </value>
                <value>
                    <fullName>IB PYP</fullName>
                </value>
                <value>
                    <fullName>IPC</fullName>
                </value>
                <value>
                    <fullName>ISAS</fullName>
                </value>
                <value>
                    <fullName>KHDA</fullName>
                </value>
                <value>
                    <fullName>LAHC</fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>NCCT</fullName>
                </value>
                <value>
                    <fullName>NEASC</fullName>
                </value>
                <value>
                    <fullName>NYSAIS</fullName>
                </value>
                <value>
                    <fullName>ONESQA</fullName>
                </value>
                <value>
                    <fullName>PENTA</fullName>
                </value>
                <value>
                    <fullName>SACS</fullName>
                </value>
                <value>
                    <fullName>WASC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CIS Applications</relationshipLabel>
        <relationshipName>CIS_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Candidate_for_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked the candidate is hired for this position, via the button hired candidate on top of the page.</inlineHelpText>
        <label>Selected Candidate for Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the status is Active.</inlineHelpText>
        <label>Status Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Host_School__c</fullName>
        <label>Status Host School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Supervisor__c</fullName>
        <label>Status Supervisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not sent</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Email__c</fullName>
        <label>Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supervisor_First_Name__c</fullName>
        <inlineHelpText>Evaluators currently working in schools must seek permission from someone to be released from school for Evaluator service. If you are retired or not currently working within a school, please list your own details here.</inlineHelpText>
        <label>Supervisor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Last_Name__c</fullName>
        <label>Supervisor Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Position_Title__c</fullName>
        <label>Supervisor Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Withdrawn Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>CIS Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Job__c</columns>
        <columns>School__c</columns>
        <columns>Application_status__c</columns>
        <columns>Applied_on__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Expressions_of_Interest</fullName>
        <columns>NAME</columns>
        <columns>Job__c</columns>
        <columns>Application_status__c</columns>
        <columns>Applied_on__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Applicant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Applications__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Expressions of Interest</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{00000000}-{00000}</displayFormat>
        <label>CIS Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIS Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>I_agree_Evaluator_Code_of_Conduct</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK($User.ContactId)),
 I_agree_to_CIS_Professional_Expectations__c  = FALSE )</errorConditionFormula>
        <errorDisplayField>I_agree_to_CIS_Professional_Expectations__c</errorDisplayField>
        <errorMessage>This is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Permission_Secured</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
On_Behalf_Of__c &lt;&gt; TRUE,
Permission_Secured__c  = FALSE, NOT( $Profile.Name = &apos;System Administrator&apos;) )</errorConditionFormula>
        <errorDisplayField>Permission_Secured__c</errorDisplayField>
        <errorMessage>This is a required field.</errorMessage>
    </validationRules>
</CustomObject>